# franken_node

./: .gitignore  .rchignore  .swarm-tick.sh  AGENTS.md  COMMIT_STANDARDS.md  CONTRIBUTING.md  Cargo.toml  FUZZING_IMPLEMENTATION_SUMMARY.md  PLAN_TO_CREATE_FRANKEN_NODE.md  README.md  REVIEW_FINDINGS_AmberCedar.md  UPGRADE_LOG.md  libcuckoo_filter.rlib  run_all_checks.py  run_all_checks_fast.sh
crates/franken-node/: Cargo.toml
crates/franken-node/benches/: anti_entropy_insert_bench.rs  blake3_performance_bench.rs  cuckoo_revocation_bench.rs  evidence_ledger_performance.rs  proof_verifier_gate_bench.rs  replay_bundle_gzip_bench.rs  threshold_sig_verify_bench.rs  trust_card_canonical_bench.rs
crates/franken-node/fuzz/fuzz_targets/: checkpoint_adversarial.rs  checkpoint_record_parse.rs  workflow_trace_validate.rs
crates/franken-node/src/: capacity_defaults.rs  cli.rs  config.rs  lib.rs  main.rs  schema_versions.rs
crates/franken-node/src/api/: compat_gate.rs  error.rs  fleet_control_routes.rs  fleet_quarantine.rs  middleware.rs  mod.rs  operator_routes.rs  service.rs  session_auth.rs  trust_card_routes.rs  verifier_routes.rs
crates/franken-node/src/atc/: mod.rs
crates/franken-node/src/claims/: claim_compiler.rs  mod.rs
crates/franken-node/src/config/: timeouts.rs
crates/franken-node/src/conformance/: connector_method_validator.rs  fsqlite_inspired_suite.rs  mod.rs  protocol_harness.rs
crates/franken-node/src/connector/: activation_pipeline.rs  admission_budget.rs  anti_amplification.rs  artifact_persistence.rs  bocpd.rs  bocpd_conformance_tests.rs  cancel_injection_gate.rs  cancellation_protocol.rs  canonical_serializer.rs  capability_artifact.rs  capability_guard.rs  claim_compiler.rs  conformance_profile.rs  control_channel.rs  control_evidence.rs  control_evidence_replay.rs  crdt.rs  device_profile.rs  diagnostic_registry.rs  dpor_schedule_gate.rs  durability.rs  durable_claim_gate.rs  ecosystem_compliance.rs  ecosystem_registry.rs  ecosystem_reputation.rs  error_code_registry.rs  error_surface.rs  eviction_saga.rs  execution_scorer.rs  fencing.rs  frame_parser.rs  fuzz_corpus.rs  golden_vectors.rs  health_gate.rs  high_assurance_promotion.rs  incident_bundle_retention.rs  interop_suite.rs  lease_conflict.rs  lease_coordinator.rs  lease_service.rs  (+38 more)
crates/franken-node/src/control_plane/: audience_token.rs  cancellation_injection.rs  cancellation_protocol.rs  control_epoch.rs  control_lane_mapping.rs  control_lane_policy.rs  control_plane_conformance_tests.rs  divergence_gate.rs  dpor_exploration.rs  (+11 more)
crates/franken-node/tests/: DISCREPANCIES.md  activation_pipeline_metamorphic.rs  adjacent_claim_language_gate.rs  adjacent_substrate_overhead_gate.rs  adversarial_compromise_reduction_tampering.rs  adversarial_extension_harness.rs  adversarial_supply_chain_poisoning.rs  adversarial_trust_card_forgery.rs  ambient_authority_gate.rs  api_session_auth_real_service_integration.rs  artifact_gate_goldens.rs  artifact_signing_golden_tests.rs  artifact_signing_key_loading.rs  artifact_signing_metamorphic.rs  asupersync_control_lane_integration.rs  atc_partition_fallback.rs  atc_verifier_api_routes.rs  attestation_gate.rs  auth_failure_limiter_loom.rs  auth_failure_limiter_per_source_isolation.rs  bench_conformance_matrix.rs  bench_run_e2e.rs  bpet_migration_stability_gate.rs  canonical_serializer_conformance.rs  canonical_serializer_fuzz_harness.rs  canonical_serializer_metamorphic.proptest-regressions  canonical_serializer_metamorphic.rs  capability_artifact_real_inputs.rs  category_shift_real_inputs.rs  challenge_response_conformance.rs  claims_compiler_metamorphic.rs  cli_error_goldens.rs  cli_golden_helpers.rs  cli_subcommand_goldens.rs  close_condition_path_gate_regressions.rs  compromise_reduction_baseline_bench.rs  connector_interop_suite_revocation.rs  connector_lifecycle_conformance_matrix.rs  connector_lifecycle_message_fuzz_harness.rs  connector_lifecycle_public_api_e2e.rs  (+156 more)
fuzz/: Cargo.toml
fuzz/artifacts/fuzz_api_request_deserialization/: crash-62b47edb8420986578f22e020df314431dc813b1
fuzz/artifacts/fuzz_capability_token_parser/: crash-081d20138a9edb90b5f802ef207976ddd78bbb7f  crash-88b587e166d3c813b9ee709d2862b83464222828
fuzz/artifacts/fuzz_receipt_trust_card_roundtrip/: crash-c6a21dd88fbe58f85c6fba76a9f384ed15a2627b
fuzz/artifacts/fuzz_remote_cap_scope_check/: crash-dce3961bca30d95692919de56a67e48ee5b72936
fuzz/artifacts/fuzz_trust_card_envelope_parsing/: crash-5bf74894a928158b07b36907299f1fbf7d7195f5
fuzz/fuzz_targets/: fuzz_api_request_deserialization.rs  fuzz_canonical_serializer_deserialize.rs  fuzz_canonical_serializer_roundtrip.rs  fuzz_capability_token_parser.rs  fuzz_compromise_reduction_report_json.rs  fuzz_config_toml_parse.rs  fuzz_connector_lifecycle_inputs.rs  fuzz_constant_time_comparison.rs  fuzz_ed25519_signature_boundaries.rs  fuzz_engine_dispatcher_capability_validation.rs  fuzz_epoch_key_derivation.rs  fuzz_evidence_ledger_entry_parse.rs  fuzz_evidence_ledger_jsonl_spill.rs  fuzz_extension_registration_manifest_parse.rs  fuzz_fleet_decision_receipt_parse.rs  fuzz_incident_bundle_parse.rs  fuzz_intent_firewall.rs  fuzz_migration_report_serialization.rs  fuzz_network_allowlist_entry_toml_parse.rs  fuzz_parse_signed_registration_manifest.rs  fuzz_receipt_trust_card_roundtrip.rs  fuzz_release_manifest_parse.rs  fuzz_remote_cap_scope_check.rs  fuzz_remote_cap_token_parse.rs  fuzz_replay_bundle_chunking_export.rs  fuzz_replay_bundle_deserialization.rs  fuzz_sandbox_policy_parse.rs  fuzz_sdk_verifier_bundle_parsing.rs  fuzz_threshold_signature_verification.rs  fuzz_trust_card_canonicalize.rs  fuzz_trust_card_compare_cbor.rs  fuzz_trust_card_envelope_parsing.rs
sdk/verifier/: CONFORMANCE_SUMMARY.md  Cargo.toml  capsule.rs  mod.rs
sdk/verifier/src/: bundle.rs  capsule.rs  counterfactual.rs  lib.rs
sdk/verifier/tests/: COVERAGE.md  DISCREPANCIES.md  README.md  bundle_roundtrip.rs  bundle_roundtrip_negative.rs  chain_verify_registry.rs  compliance_report.rs  conformance_harness.rs  counterfactual_verify.rs  public_api_contract.rs
(+3094 files in other folders)
