[workspace]
members = [
  "crates/franken-node",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Franken Node Contributors"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
