[package]
name = "franken-node-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4.3"
serde_json = "1.0"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

[dependencies.frankenengine-node]
path = "../crates/franken-node"
features = ["fuzz"]

[dependencies.frankenengine-verifier-sdk]
path = "../sdk/verifier"
features = ["fuzz"]

# Prevent fuzzing dependencies from leaking into production
[[bin]]
name = "fuzz_constant_time_comparison"
path = "fuzz_targets/fuzz_constant_time_comparison.rs"
test = false
doc = false

[[bin]]
name = "fuzz_threshold_signature_verification"
path = "fuzz_targets/fuzz_threshold_signature_verification.rs"
test = false
doc = false

[[bin]]
name = "fuzz_epoch_key_derivation"
path = "fuzz_targets/fuzz_epoch_key_derivation.rs"
test = false
doc = false

[[bin]]
name = "fuzz_intent_firewall"
path = "fuzz_targets/fuzz_intent_firewall.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ssrf_policy"
path = "fuzz_targets/fuzz_ssrf_policy.rs"
test = false
doc = false

[[bin]]
name = "fuzz_replay_bundle_deserialization"
path = "fuzz_targets/fuzz_replay_bundle_deserialization.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sdk_verifier_bundle_parsing"
path = "fuzz_targets/fuzz_sdk_verifier_bundle_parsing.rs"
test = false
doc = false

