[package]
name = "franken-node-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
# Remove rand_core feature to avoid randomness dependencies for deterministic fuzzing
ed25519-dalek = { version = "2.1.1" }
hex = "0.4.3"
serde_json = "1.0"
# Remove zeroize_derive to reduce proc-macro compilation overhead
zeroize = { version = "1.8.2" }

[dependencies.frankenengine-node]
path = "../crates/franken-node"
default-features = false
# Exclude heavy compilation dependencies for faster fuzz builds:
# - parsing: tree-sitter (~3-4min savings)
# - http-client: ureq/url (~1-2min savings)
# - external-commands: which/ctrlc (~30s savings)
features = ["fuzz", "test-support"]

# Remove frankenengine-verifier-sdk to reduce compilation overhead
# Only enable for fuzz targets that specifically need SDK functionality
# [dependencies.frankenengine-verifier-sdk]
# path = "../sdk/verifier"
# features = ["fuzz"]

# Prevent fuzzing dependencies from leaking into production
[[bin]]
name = "fuzz_constant_time_comparison"
path = "fuzz_targets/fuzz_constant_time_comparison.rs"
test = false
doc = false

[[bin]]
name = "fuzz_threshold_signature_verification"
path = "fuzz_targets/fuzz_threshold_signature_verification.rs"
test = false
doc = false

[[bin]]
name = "fuzz_epoch_key_derivation"
path = "fuzz_targets/fuzz_epoch_key_derivation.rs"
test = false
doc = false

[[bin]]
name = "fuzz_intent_firewall"
path = "fuzz_targets/fuzz_intent_firewall.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ssrf_policy"
path = "fuzz_targets/fuzz_ssrf_policy.rs"
test = false
doc = false

[[bin]]
name = "fuzz_replay_bundle_deserialization"
path = "fuzz_targets/fuzz_replay_bundle_deserialization.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sdk_verifier_bundle_parsing"
path = "fuzz_targets/fuzz_sdk_verifier_bundle_parsing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_api_request_deserialization"
path = "fuzz_targets/fuzz_api_request_deserialization.rs"
test = false
doc = false

[[bin]]
name = "fuzz_trust_card_envelope_parsing"
path = "fuzz_targets/fuzz_trust_card_envelope_parsing.rs"
test = false
doc = false
