[package]
name = "franken-node-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
# Remove rand_core feature to avoid randomness dependencies for deterministic fuzzing
ed25519-dalek = { version = "2.1.1" }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.2"
# Remove zeroize_derive to reduce proc-macro compilation overhead
zeroize = { version = "1.8.2" }

[dependencies.frankenengine-node]
path = "../crates/franken-node"
default-features = false
# Exclude heavy compilation dependencies for faster fuzz builds:
# - parsing: tree-sitter (~3-4min savings)
# - http-client: ureq/url (~1-2min savings)
# - external-commands: which/ctrlc (~30s savings)
features = [
    "fuzz",
    "test-support",
    "cbor-serialization",
    "extended-surfaces",
    "http-client",
    "parsing",
    "external-commands",
]

[dependencies.frankenengine-verifier-sdk]
path = "../sdk/verifier"
features = ["fuzz"]

# Prevent fuzzing dependencies from leaking into production
[[bin]]
name = "fuzz_constant_time_comparison"
path = "fuzz_targets/fuzz_constant_time_comparison.rs"
test = false
doc = false

[[bin]]
name = "fuzz_threshold_signature_verification"
path = "fuzz_targets/fuzz_threshold_signature_verification.rs"
test = false
doc = false

[[bin]]
name = "fuzz_epoch_key_derivation"
path = "fuzz_targets/fuzz_epoch_key_derivation.rs"
test = false
doc = false

[[bin]]
name = "fuzz_epoch_validity"
path = "fuzz_targets/fuzz_epoch_validity.rs"
test = false
doc = false

[[bin]]
name = "fuzz_intent_firewall"
path = "fuzz_targets/fuzz_intent_firewall.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ssrf_policy"
path = "fuzz_targets/fuzz_ssrf_policy.rs"
test = false
doc = false

[[bin]]
name = "fuzz_replay_bundle_deserialization"
path = "fuzz_targets/fuzz_replay_bundle_deserialization.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sdk_verifier_bundle_parsing"
path = "fuzz_targets/fuzz_sdk_verifier_bundle_parsing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_api_request_deserialization"
path = "fuzz_targets/fuzz_api_request_deserialization.rs"
test = false
doc = false

[[bin]]
name = "fuzz_trust_card_envelope_parsing"
path = "fuzz_targets/fuzz_trust_card_envelope_parsing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ed25519_signature_boundaries"
path = "fuzz_targets/fuzz_ed25519_signature_boundaries.rs"
test = false
doc = false

[[bin]]
name = "fuzz_capability_token_parser"
path = "fuzz_targets/fuzz_capability_token_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_remote_cap_token_parse"
path = "fuzz_targets/fuzz_remote_cap_token_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_trust_card_compare_cbor"
path = "fuzz_targets/fuzz_trust_card_compare_cbor.rs"
test = false
doc = false

[[bin]]
name = "fuzz_remote_cap_scope_check"
path = "fuzz_targets/fuzz_remote_cap_scope_check.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sandbox_policy_parse"
path = "fuzz_targets/fuzz_sandbox_policy_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_connector_lifecycle_inputs"
path = "fuzz_targets/fuzz_connector_lifecycle_inputs.rs"
test = false
doc = false

[[bin]]
name = "fuzz_canonical_serializer_roundtrip"
path = "fuzz_targets/fuzz_canonical_serializer_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "fuzz_replay_bundle_chunking_export"
path = "fuzz_targets/fuzz_replay_bundle_chunking_export.rs"
test = false
doc = false

[[bin]]
name = "fuzz_incident_bundle_parse"
path = "fuzz_targets/fuzz_incident_bundle_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_receipt_trust_card_roundtrip"
path = "fuzz_targets/fuzz_receipt_trust_card_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "fuzz_release_manifest_parse"
path = "fuzz_targets/fuzz_release_manifest_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_migration_report_serialization"
path = "fuzz_targets/fuzz_migration_report_serialization.rs"
test = false
doc = false

[[bin]]
name = "fuzz_migration_rollback"
path = "fuzz_targets/fuzz_migration_rollback.rs"
test = false
doc = false

[[bin]]
name = "fuzz_extension_registration_manifest_parse"
path = "fuzz_targets/fuzz_extension_registration_manifest_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parse_signed_registration_manifest"
path = "fuzz_targets/fuzz_parse_signed_registration_manifest.rs"
test = false
doc = false

[[bin]]
name = "fuzz_vef_proof_input_envelope"
path = "fuzz_targets/fuzz_vef_proof_input_envelope.rs"
test = false
doc = false

[[bin]]
name = "fuzz_fleet_decision_receipt_parse"
path = "fuzz_targets/fuzz_fleet_decision_receipt_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_evidence_ledger_entry_parse"
path = "fuzz_targets/fuzz_evidence_ledger_entry_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_engine_dispatcher_capability_validation"
path = "fuzz_targets/fuzz_engine_dispatcher_capability_validation.rs"
test = false
doc = false
