[package]
name = "frankenengine-node"
version.workspace = true
edition.workspace = true
license.workspace = true
autotests = false

[[bin]]
name = "franken-node"
path = "src/main.rs"
test = false

[lib]
path = "src/lib.rs"
test = false

[features]
asupersync-transport = ["dep:asupersync"]
extended-surfaces = []
test-support = []
fuzz = ["arbitrary"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap = { version = "4.5.32", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono = { version = "0.4.40", features = ["serde", "clock"] }
uuid = { version = "1.16.0", features = ["v7", "serde"] }
sha2 = "0.10.8"
hmac = "0.12.1"
hkdf = "0.12.4"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
hex = "0.4.3"
base64 = "0.22.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
serde_cbor = "0.11.2"
flate2 = "1.0.35"
rand = "0.8.5"
asupersync = { path = "/dp/asupersync", optional = true }
frankentui.workspace = true
frankenengine-engine = { path = "../../../franken_engine/crates/franken-engine" }
frankenengine-extension-host = { path = "../../../franken_engine/crates/franken-extension-host" }
tracing = { workspace = true }
subtle = "2.6.1"
tempfile = "3.15"
arbitrary = { version = "1.3", optional = true, features = ["derive"] }
ureq = "2"
url = "2.5"
which = "8.0.2"
ctrlc = "3"
tree-sitter = "0.26.8"
tree-sitter-javascript = "0.25.0"

[dev-dependencies]
assert_cmd = "2.0.16"
assert2 = "0.4.0"
fsqlite = { path = "/dp/frankensqlite/crates/fsqlite", default-features = false, features = ["native"] }
frankenengine-verifier-sdk = { path = "../../sdk/verifier" }
fastapi_rust = { package = "fastapi-rust", path = "/dp/fastapi_rust/crates/fastapi", default-features = false }
regex = "1.11.1"
sqlmodel = { path = "/dp/sqlmodel_rust/crates/sqlmodel", default-features = false }
sqlmodel-core = { path = "/dp/sqlmodel_rust/crates/sqlmodel-core" }
sqlmodel-schema = { path = "/dp/sqlmodel_rust/crates/sqlmodel-schema" }
syn = { version = "2.0", features = ["full"] }
tracing-subscriber = { workspace = true }
insta = { version = "1.40", features = ["json"] }

[[test]]
name = "migrate_cli_e2e"
path = "tests/migrate_cli_e2e.rs"

[[test]]
name = "asupersync_control_lane_integration"
path = "tests/asupersync_control_lane_integration.rs"
required-features = ["asupersync-transport"]

[[test]]
name = "verifier_sdk_capsule_replay"
path = "../../tests/conformance/verifier_sdk_capsule_replay.rs"

[[test]]
name = "idempotency_key_derivation"
path = "../../tests/conformance/idempotency_key_derivation.rs"
required-features = ["extended-surfaces"]

[[test]]
name = "fastapi_rust_control_plane_integration"
path = "tests/fastapi_rust_control_plane_integration.rs"
required-features = ["test-support"]

[[test]]
name = "engine_dispatcher_pipe_drain"
path = "tests/engine_dispatcher_pipe_drain.rs"

[[test]]
name = "artifact_gate_goldens"
path = "tests/artifact_gate_goldens.rs"

[[test]]
name = "artifact_signing_key_loading"
path = "tests/artifact_signing_key_loading.rs"

[[test]]
name = "proof_generator_timeout_race"
path = "tests/proof_generator_timeout_race.rs"

[[test]]
name = "supply_chain_golden_artifacts"
path = "tests/supply_chain_golden_artifacts.rs"
required-features = ["extended-surfaces"]
