[package]
name = "frankenengine-node"
version.workspace = true
edition.workspace = true
license.workspace = true
autotests = false

[[bin]]
name = "franken-node"
path = "src/main.rs"
test = false

[[bin]]
name = "test-engine"
path = "src/bin/test_engine.rs"
test = false

[lib]
path = "src/lib.rs"
test = false

[features]
asupersync-transport = ["dep:asupersync"]
extended-surfaces = []
test-support = []
fuzz = ["arbitrary"]
# Heavy compilation dependencies - optional for fuzz builds
parsing = ["dep:tree-sitter", "dep:tree-sitter-javascript"]
http-client = ["dep:ureq", "dep:url"]
external-commands = ["dep:which", "dep:ctrlc"]
compression = ["dep:flate2"]
cbor-serialization = ["dep:serde_cbor"]
ui = ["dep:frankentui"]
engine = ["dep:frankenengine-engine", "dep:frankenengine-extension-host"]
default = ["extended-surfaces", "parsing", "http-client", "external-commands", "compression", "cbor-serialization", "ui", "engine"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap = { version = "4.5.32", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono = { version = "0.4.40", features = ["serde", "clock"] }
uuid = { version = "1.16.0", features = ["v7", "serde"] }
sha2 = "0.10.8"
hmac = "0.12.1"
hkdf = "0.12.4"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
hex = "0.4.3"
base64 = "0.22.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
serde_cbor = { version = "0.11.2", optional = true }
flate2 = { version = "1.0.35", optional = true }
rand = "0.8.5"
asupersync = { version = "0.3.1", optional = true }
frankentui = { workspace = true, optional = true }
frankenengine-engine = { path = "../../../franken_engine/crates/franken-engine", optional = true }
frankenengine-extension-host = { path = "../../../franken_engine/crates/franken-extension-host", optional = true }
tracing = { workspace = true }
subtle = "2.6.1"
tempfile = "3.15"
arbitrary = { version = "1.3", optional = true, features = ["derive"] }
# Heavy compilation dependencies made optional for faster fuzz builds
ureq = { version = "2", optional = true }
url = { version = "2.5", optional = true }
which = { version = "8.0.2", optional = true }
ctrlc = { version = "3", optional = true, features = ["termination"] }
tree-sitter = { version = "0.26.8", optional = true }
tree-sitter-javascript = { version = "0.25.0", optional = true }

[dev-dependencies]
assert_cmd = "2.0.16"
assert2 = "0.4.0"
fsqlite = { path = "/dp/frankensqlite/crates/fsqlite", default-features = false, features = ["native"] }
frankenengine-verifier-sdk = { path = "../../sdk/verifier" }
fastapi_rust = { package = "fastapi-rust", path = "/dp/fastapi_rust/crates/fastapi", default-features = false }
regex = "1.11.1"
sqlmodel = { path = "/dp/sqlmodel_rust/crates/sqlmodel", default-features = false }
sqlmodel-core = { path = "/dp/sqlmodel_rust/crates/sqlmodel-core" }
sqlmodel-schema = { path = "/dp/sqlmodel_rust/crates/sqlmodel-schema" }
syn = { version = "2.0", features = ["full"] }
tracing-subscriber = { workspace = true }
insta = { version = "1.40", features = ["json", "filters"] }
arbitrary = { version = "1.3", features = ["derive"] }

[[test]]
name = "migrate_cli_e2e"
path = "tests/migrate_cli_e2e.rs"

[[test]]
name = "incident_cli_e2e"
path = "tests/incident_cli_e2e.rs"

[[test]]
name = "remotecap_cli_e2e"
path = "tests/remotecap_cli_e2e.rs"

[[test]]
name = "remote_cap_enforcement"
path = "tests/remote_cap_enforcement.rs"

[[test]]
name = "fleet_cli_e2e"
path = "tests/fleet_cli_e2e.rs"
required-features = ["test-support"]

[[test]]
name = "frankentui_surface_migration"
path = "tests/frankentui_surface_migration.rs"

[[test]]
name = "asupersync_control_lane_integration"
path = "tests/asupersync_control_lane_integration.rs"
required-features = ["asupersync-transport"]

[[test]]
name = "verifier_sdk_capsule_replay"
path = "../../tests/conformance/verifier_sdk_capsule_replay.rs"

[[test]]
name = "idempotency_key_derivation"
path = "../../tests/conformance/idempotency_key_derivation.rs"
required-features = ["extended-surfaces"]

[[test]]
name = "fastapi_rust_control_plane_integration"
path = "tests/fastapi_rust_control_plane_integration.rs"
required-features = ["test-support"]

[[test]]
name = "engine_dispatcher_pipe_drain"
path = "tests/engine_dispatcher_pipe_drain.rs"

[[test]]
name = "artifact_gate_goldens"
path = "tests/artifact_gate_goldens.rs"

[[test]]
name = "artifact_signing_key_loading"
path = "tests/artifact_signing_key_loading.rs"

[[test]]
name = "verify_release_cli_e2e"
path = "tests/verify_release_cli_e2e.rs"

[[test]]
name = "replay_bundle_adversarial_fuzz"
path = "tests/replay_bundle_adversarial_fuzz.rs"

[[test]]
name = "replay_bundle_integrity_conformance"
path = "tests/replay_bundle_integrity_conformance.rs"

[[test]]
name = "migration_report_conformance"
path = "tests/migration_report_conformance.rs"

[[test]]
name = "runtime_cli_e2e"
path = "tests/runtime_cli_e2e.rs"

[[test]]
name = "registry_cli_e2e"
path = "tests/registry_cli_e2e.rs"

[[test]]
name = "trust_object_id_real_inputs"
path = "tests/trust_object_id_real_inputs.rs"

[[test]]
name = "trust_card_authoritative_state_real_inputs"
path = "tests/trust_card_authoritative_state_real_inputs.rs"

[[test]]
name = "canonical_serializer_real_inputs"
path = "tests/canonical_serializer_real_inputs.rs"

[[test]]
name = "category_shift_real_inputs"
path = "tests/category_shift_real_inputs.rs"

[[test]]
name = "capability_artifact_real_inputs"
path = "tests/capability_artifact_real_inputs.rs"

[[test]]
name = "session_auth_real_lifecycle"
path = "tests/session_auth_real_lifecycle.rs"
required-features = ["test-support"]

[[test]]
name = "proof_generator_timeout_race"
path = "tests/proof_generator_timeout_race.rs"

[[test]]
name = "supply_chain_golden_artifacts"
path = "tests/supply_chain_golden_artifacts.rs"
required-features = ["extended-surfaces"]

[[test]]
name = "frankensqlite_adapter_conformance"
path = "tests/frankensqlite_adapter_conformance.rs"

[[test]]
name = "trust_cli_e2e"
path = "tests/trust_cli_e2e.rs"
required-features = ["test-support"]

[[test]]
name = "telemetry_bridge_regressions"
path = "tests/telemetry_bridge_regressions.rs"
required-features = ["test-support"]

[[test]]
name = "cli_subcommand_goldens"
path = "tests/cli_subcommand_goldens.rs"
required-features = ["test-support"]

[[test]]
name = "cli_error_goldens"
path = "tests/cli_error_goldens.rs"
required-features = ["test-support"]

[[test]]
name = "vef_receipt_schema_conformance"
path = "tests/vef_receipt_schema_conformance.rs"

[[test]]
name = "observability_evidence_ledger_regressions"
path = "tests/observability_evidence_ledger_regressions.rs"

[[test]]
name = "observability_adversarial_regressions"
path = "tests/observability_adversarial_regressions.rs"
required-features = ["test-support"]

[[test]]
name = "fleet_quarantine_metamorphic"
path = "tests/fleet_quarantine_metamorphic.rs"

[[test]]
name = "replay_bundle_metamorphic"
path = "tests/replay_bundle_metamorphic.rs"

[[test]]
name = "canonical_serializer_metamorphic"
path = "tests/canonical_serializer_metamorphic.rs"
