[package]
name = "frankenengine-node"
version.workspace = true
edition.workspace = true
license.workspace = true
autotests = false

[[bin]]
name = "franken-node"
path = "src/main.rs"
test = false

[[bin]]
name = "test-engine"
path = "src/bin/test_engine.rs"
test = false
required-features = ["test-support"]

[lib]
path = "src/lib.rs"
test = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[features]
asupersync-transport = ["dep:asupersync"]

# Legacy feature for backward compatibility - includes all new features
extended-surfaces = [
    "control-plane",
    "policy-engine",
    "remote-ops",
    "admin-tools",
    "verifier-tools",
    "advanced-features"
]

# Granular feature split
control-plane = ["policy-engine"]      # API middleware, fleet operations, control plane functionality
policy-engine = []      # Security policies, guardrail monitors, hardening state machines
remote-ops = []         # Remote operations, distributed coordination, eviction sagas
admin-tools = []        # Enterprise governance, migration tools, administrative functionality
verifier-tools = ["control-plane"]     # Verifier-specific tooling, economy, SDK
advanced-features = ["verifier-tools"]  # Claims, conformance, encoding, extensions, federation, perf, repair

test-support = ["control-plane", "admin-tools"]
# Heavy compilation dependencies - optional for fuzz builds
http-client = ["dep:ureq", "dep:url"]
external-commands = ["dep:which", "dep:ctrlc"]
compression = ["dep:flate2"]
cbor-serialization = ["dep:serde_cbor"]
engine = ["dep:frankenengine-engine", "dep:frankenengine-extension-host"]
blake3 = ["dep:blake3"]
# Default stays limited to features needed for a usable node binary.
# Heavy product surfaces and optional export formats require explicit opt-in.
default = ["engine", "http-client", "external-commands"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap = { version = "4.5.32", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono = { version = "0.4.40", features = ["serde", "clock"] }
uuid = { version = "1.16.0", features = ["v7", "serde"] }
sha2 = "0.11.0"
hmac = "0.13.0"
hkdf = "0.13.0"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
hex = "0.4.3"
base64 = "0.22.1"
franken-security-macros = { path = "../franken-security-macros" }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
serde_cbor = { version = "0.11.2", optional = true }
flate2 = { version = "1.0.35", optional = true }
rand = "0.8.5"
asupersync = { version = "0.3.1", optional = true }
frankentui.workspace = true
frankenengine-engine = { path = "../../../franken_engine/crates/franken-engine", optional = true }
frankenengine-extension-host = { path = "../../../franken_engine/crates/franken-extension-host", optional = true }
tracing = { workspace = true }
subtle = "2.6.1"
tempfile = "3.15"
arbitrary = { version = "1.3", features = ["derive"] }
proptest = "1.6"
# Heavy compilation dependencies made optional for faster fuzz builds
ureq = { version = "3", optional = true }
url = { version = "2.5", optional = true }
which = { version = "8.0.2", optional = true }
ctrlc = { version = "3", optional = true, features = ["termination"] }
tree-sitter = "0.26.8"
tree-sitter-javascript = "0.25.0"
blake3 = { version = "1.5", optional = true }

[dev-dependencies]
assert_cmd = "2.0.16"
assert2 = "0.4.0"
fsqlite = { path = "/dp/frankensqlite/crates/fsqlite", default-features = false, features = ["native"] }
frankenengine-verifier-sdk = { path = "../../sdk/verifier" }
fastapi_rust = { package = "fastapi-rust", path = "/dp/fastapi_rust/crates/fastapi", default-features = false }
loom = "0.7"
tokio = { workspace = true, features = ["sync", "time"] }
regex = "1.11.1"
sqlmodel = { path = "/dp/sqlmodel_rust/crates/sqlmodel", default-features = false }
sqlmodel-core = { path = "/dp/sqlmodel_rust/crates/sqlmodel-core" }
sqlmodel-schema = { path = "/dp/sqlmodel_rust/crates/sqlmodel-schema" }
syn = { version = "2.0", features = ["full"] }
tracing-subscriber = { workspace = true }
insta = { version = "1.40", features = ["json", "filters"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "migrate_cli_e2e"
path = "tests/migrate_cli_e2e.rs"
required-features = ["test-support"]

[[test]]
name = "verifier_economy_conformance"
path = "tests/verifier_economy_conformance.rs"
required-features = ["extended-surfaces"]

[[test]]
name = "incident_cli_e2e"
path = "tests/incident_cli_e2e.rs"

[[test]]
name = "cli_arg_validation"
path = "tests/cli_arg_validation.rs"

[[test]]
name = "replay_import_anchor"
path = "tests/replay_import_anchor.rs"

[[test]]
name = "remotecap_cli_e2e"
path = "tests/remotecap_cli_e2e.rs"

[[test]]
name = "remotecap_cli_wire_conformance"
path = "tests/remotecap_cli_wire_conformance.rs"

[[test]]
name = "remote_cap_enforcement"
path = "tests/remote_cap_enforcement.rs"

[[test]]
name = "remote_cap_replay_token_set_loom"
path = "tests/remote_cap_replay_token_set_loom.rs"

[[test]]
name = "auth_failure_limiter_loom"
path = "tests/auth_failure_limiter_loom.rs"

[[test]]
name = "operator_process_start_initialization_loom"
path = "tests/operator_process_start_initialization_loom.rs"

[[test]]
name = "evidence_ledger_append_ordering_loom"
path = "tests/evidence_ledger_append_ordering_loom.rs"

[[test]]
name = "isolation_rail_router"
path = "tests/isolation_rail_router.rs"

[[test]]
name = "remote_virtual_transport_faults_regressions"
path = "tests/remote_virtual_transport_faults_regressions.rs"

[[test]]
name = "connector_interop_suite_revocation"
path = "tests/connector_interop_suite_revocation.rs"
required-features = ["control-plane"]

[[test]]
name = "connector_lifecycle_public_api_e2e"
path = "tests/connector_lifecycle_public_api_e2e.rs"

[[test]]
name = "atc_verifier_api_routes"
path = "tests/atc_verifier_api_routes.rs"
required-features = ["control-plane"]

[[test]]
name = "fleet_cli_e2e"
path = "tests/fleet_cli_e2e.rs"
required-features = ["test-support"]

[[test]]
name = "fleet_decision_contract_harness"
path = "tests/fleet_decision_contract_harness.rs"
required-features = ["control-plane"]

[[test]]
name = "frankentui_surface_migration"
path = "tests/frankentui_surface_migration.rs"

[[test]]
name = "asupersync_control_lane_integration"
path = "tests/asupersync_control_lane_integration.rs"
required-features = ["asupersync-transport"]

[[test]]
name = "verifier_sdk_capsule_replay"
path = "../../tests/conformance/verifier_sdk_capsule_replay.rs"

[[test]]
name = "sdk_verifier_public_api_fuzz_harness"
path = "tests/sdk_verifier_public_api_fuzz_harness.rs"

[[test]]
name = "sdk_verifier_public_api_golden_conformance"
path = "tests/sdk_verifier_public_api_golden_conformance.rs"

[[test]]
name = "idempotency_key_derivation"
path = "../../tests/conformance/idempotency_key_derivation.rs"
required-features = ["extended-surfaces"]

[[test]]
name = "fastapi_rust_control_plane_integration"
path = "tests/fastapi_rust_control_plane_integration.rs"
required-features = ["test-support"]

[[test]]
name = "extension_artifact_contract_conformance"
path = "tests/extension_artifact_contract_conformance.rs"
required-features = ["extended-surfaces"]

[[test]]
name = "audience_token_multi_delegation"
path = "tests/test_multi_delegation.rs"

[[test]]
name = "audience_token_security"
path = "tests/exploit_audience_token.rs"

[[test]]
name = "engine_dispatcher_pipe_drain"
path = "tests/engine_dispatcher_pipe_drain.rs"

[[test]]
name = "artifact_gate_goldens"
path = "tests/artifact_gate_goldens.rs"

[[test]]
name = "artifact_signing_key_loading"
path = "tests/artifact_signing_key_loading.rs"

[[test]]
name = "verify_release_cli_e2e"
path = "tests/verify_release_cli_e2e.rs"

[[test]]
name = "replay_bundle_adversarial_fuzz"
path = "tests/replay_bundle_adversarial_fuzz.rs"

[[test]]
name = "replay_bundle_integrity_conformance"
path = "tests/replay_bundle_integrity_conformance.rs"

[[test]]
name = "incident_bundle_integrity_conformance"
path = "tests/incident_bundle_integrity_conformance.rs"

[[test]]
name = "replay_coverage_gate_conformance"
path = "tests/replay_coverage_gate_conformance.rs"

[[test]]
name = "migration_report_conformance"
path = "tests/migration_report_conformance.rs"
required-features = ["test-support"]

[[test]]
name = "runtime_cli_e2e"
path = "tests/runtime_cli_e2e.rs"

[[test]]
name = "runtime_lane_router_security"
path = "tests/runtime_lane_router_security.rs"

[[test]]
name = "runtime_lane_router_priority"
path = "tests/runtime_lane_router_priority.rs"

[[test]]
name = "runtime_lane_scheduler_queue_identity"
path = "tests/runtime_lane_scheduler_queue_identity.rs"

[[test]]
name = "storage_metamorphic"
path = "tests/storage_metamorphic.rs"

[[test]]
name = "control_lane_mapping_policy"
path = "tests/control_lane_mapping_policy.rs"

[[test]]
name = "control_lane_policy"
path = "tests/control_lane_policy.rs"

[[test]]
name = "registry_cli_e2e"
path = "tests/registry_cli_e2e.rs"

[[test]]
name = "registry_cli_wire_conformance"
path = "tests/registry_cli_wire_conformance.rs"

[[test]]
name = "registry_staking_governance_conformance"
path = "tests/registry_staking_governance_conformance.rs"
required-features = ["extended-surfaces"]

[[test]]
name = "trust_object_id_real_inputs"
path = "tests/trust_object_id_real_inputs.rs"

[[test]]
name = "trust_card_authoritative_state_real_inputs"
path = "tests/trust_card_authoritative_state_real_inputs.rs"

[[test]]
name = "trust_card_wire_conformance"
path = "tests/trust_card_wire_conformance.rs"

[[test]]
name = "trust_card_schema_conformance"
path = "tests/trust_card_schema_conformance.rs"

[[test]]
name = "canonical_serializer_real_inputs"
path = "tests/canonical_serializer_real_inputs.rs"

[[test]]
name = "canonical_serializer_conformance"
path = "tests/canonical_serializer_conformance.rs"

[[test]]
name = "category_shift_real_inputs"
path = "tests/category_shift_real_inputs.rs"

[[test]]
name = "claims_compiler_metamorphic"
path = "tests/claims_compiler_metamorphic.rs"
required-features = ["extended-surfaces"]

[[test]]
name = "capability_artifact_real_inputs"
path = "tests/capability_artifact_real_inputs.rs"

[[test]]
name = "session_auth_real_lifecycle"
path = "tests/session_auth_real_lifecycle.rs"
required-features = ["test-support"]

[[test]]
name = "session_auth_key_roles"
path = "tests/session_auth_key_roles.rs"
required-features = ["test-support"]

[[test]]
name = "proof_generator_timeout_race"
path = "tests/proof_generator_timeout_race.rs"

[[test]]
name = "supply_chain_golden_artifacts"
path = "tests/supply_chain_golden_artifacts.rs"
required-features = ["extended-surfaces"]

[[test]]
name = "supply_chain_trust_card_golden_bytes"
path = "tests/supply_chain_trust_card_golden_bytes.rs"

[[test]]
name = "frankensqlite_adapter_conformance"
path = "tests/frankensqlite_adapter_conformance.rs"

[[test]]
name = "trust_cli_e2e"
path = "tests/trust_cli_e2e.rs"
required-features = ["test-support"]

[[test]]
name = "telemetry_bridge_regressions"
path = "tests/telemetry_bridge_regressions.rs"
required-features = ["test-support"]

[[test]]
name = "cancellation_protocol_conformance"
path = "tests/cancellation_protocol_conformance.rs"

[[test]]
name = "cli_subcommand_goldens"
path = "tests/cli_subcommand_goldens.rs"
required-features = ["test-support"]

[[test]]
name = "doctor_close_condition_e2e"
path = "tests/doctor_close_condition_e2e.rs"
required-features = ["test-support"]

[[test]]
name = "doctor_close_condition_conformance"
path = "tests/doctor_close_condition_conformance.rs"

[[test]]
name = "doctor_json_schema_conformance"
path = "tests/doctor_json_schema_conformance.rs"

[[test]]
name = "close_condition_path_gate_regressions"
path = "tests/close_condition_path_gate_regressions.rs"

[[test]]
name = "mitigation_synthesis_length_framing"
path = "tests/mitigation_synthesis_length_framing.rs"
required-features = ["test-support"]

[[test]]
name = "cli_error_goldens"
path = "tests/cli_error_goldens.rs"
required-features = ["test-support"]

[[test]]
name = "vef_receipt_schema_conformance"
path = "tests/vef_receipt_schema_conformance.rs"

[[test]]
name = "vef_proof_scheduler_conformance"
path = "tests/vef_proof_scheduler_conformance.rs"

[[test]]
name = "vef_proof_service_fail_closed"
path = "tests/vef_proof_service_fail_closed.rs"

[[test]]
name = "observability_evidence_ledger_regressions"
path = "tests/observability_evidence_ledger_regressions.rs"

[[test]]
name = "evidence_ledger_chain_order_metamorphic"
path = "tests/evidence_ledger_chain_order_metamorphic.rs"

[[test]]
name = "adversarial_trust_card_forgery"
path = "tests/adversarial_trust_card_forgery.rs"

[[test]]
name = "adversarial_supply_chain_poisoning"
path = "tests/adversarial_supply_chain_poisoning.rs"

[[test]]
name = "sync_durability_regression"
path = "tests/sync_durability_regression.rs"

[[test]]
name = "rollout_state_obligation"
path = "tests/rollout_state_obligation.rs"
required-features = ["test-support"]

[[test]]
name = "observability_adversarial_regressions"
path = "tests/observability_adversarial_regressions.rs"
required-features = ["test-support"]

[[test]]
name = "observability_witness_metamorphic"
path = "tests/observability_witness_metamorphic.rs"

[[test]]
name = "fleet_quarantine_metamorphic"
path = "tests/fleet_quarantine_metamorphic.rs"
required-features = ["test-support"]

[[test]]
name = "fleet_quarantine_e2e_full"
path = "tests/fleet_quarantine_e2e_full.rs"
required-features = ["test-support"]

[[test]]
name = "fleet_quarantine_rollback_receipt"
path = "tests/fleet_quarantine_rollback_receipt.rs"
required-features = ["test-support"]

[[test]]
name = "fleet_quarantine_state_machine_conformance"
path = "tests/fleet_quarantine_state_machine_conformance.rs"
required-features = ["test-support"]

[[test]]
name = "fleet_quarantine_serde_fuzz_harness"
path = "tests/fleet_quarantine_serde_fuzz_harness.rs"
required-features = ["test-support"]

[[test]]
name = "replay_bundle_metamorphic"
path = "tests/replay_bundle_metamorphic.rs"

[[test]]
name = "time_travel_metamorphic"
path = "tests/time_travel_metamorphic.rs"

[[test]]
name = "bench_conformance_matrix"
path = "tests/bench_conformance_matrix.rs"

[[test]]
name = "canonical_serializer_metamorphic"
path = "tests/canonical_serializer_metamorphic.rs"

[[test]]
name = "control_epoch_metamorphic"
path = "tests/control_epoch_metamorphic.rs"

[[test]]
name = "control_plane_epoch_key_conformance"
path = "tests/control_plane_epoch_key_conformance.rs"

[[test]]
name = "replay_trace_canonical_conformance"
path = "tests/replay_trace_canonical_conformance.rs"
required-features = ["extended-surfaces"]

[[test]]
name = "replay_window_metamorphic"
path = "tests/replay_window_metamorphic.rs"

[[test]]
name = "trust_card_metamorphic"
path = "tests/trust_card_metamorphic.rs"

[[test]]
name = "epoch_key_derivation_metamorphic"
path = "tests/epoch_key_derivation_metamorphic.rs"

[[test]]
name = "trust_cli_e2e_real_runtime"
path = "tests/trust_cli_e2e_real_runtime.rs"

[[test]]
name = "session_auth_real_lifecycle_structured"
path = "tests/session_auth_real_lifecycle_structured.rs"
required-features = ["test-support"]

[[test]]
name = "security_perfect_e2e_enforcement"
path = "tests/security_perfect_e2e_enforcement.rs"

[[test]]
name = "cross_substrate_vector_consumer_conformance"
path = "tests/cross_substrate_vector_consumer_conformance.rs"

[[test]]
name = "remote_api_conformance_harness"
path = "tests/remote_api_conformance_harness.rs"
required-features = ["control-plane"]

[[test]]
name = "trust_cli_e2e_real_node_runtime"
path = "tests/trust_cli_e2e_real_node_runtime.rs"

[[test]]
name = "artifact_signing_golden_tests"
path = "tests/artifact_signing_golden_tests.rs"

[[test]]
name = "decision_receipt_json_golden"
path = "tests/decision_receipt_json_golden.rs"

[[test]]
name = "artifact_signing_metamorphic"
path = "tests/artifact_signing_metamorphic.rs"

[[test]]
name = "activation_pipeline_metamorphic"
path = "tests/activation_pipeline_metamorphic.rs"

[[test]]
name = "native_engine_compat"
path = "tests/native_engine_compat.rs"

[[test]]
name = "engine_dispatcher_profile_conformance"
path = "tests/engine_dispatcher_profile_conformance.rs"
required-features = ["engine"]

[[test]]
name = "replay_bundle_event_reorder_metamorphic"
path = "tests/replay_bundle_event_reorder_metamorphic.rs"

[[test]]
name = "proof_carrying_decode"
path = "tests/proof_carrying_decode.rs"
required-features = ["advanced-features"]

[[test]]
name = "revocation_freshness_regressions"
path = "tests/revocation_freshness_regressions.rs"

[[test]]
name = "e2e_transparency_inclusion_real_pipeline"
path = "tests/e2e_transparency_inclusion_real_pipeline.rs"

[[test]]
name = "e2e_migration_pipeline_real_cohort"
path = "tests/e2e_migration_pipeline_real_cohort.rs"

[[test]]
name = "e2e_revocation_registry_state_machine"
path = "tests/e2e_revocation_registry_state_machine.rs"

[[test]]
name = "e2e_incident_bundle_lifecycle"
path = "tests/e2e_incident_bundle_lifecycle.rs"
required-features = ["control-plane"]

[[test]]
name = "e2e_trust_card_lifecycle"
path = "tests/e2e_trust_card_lifecycle.rs"

[[test]]
name = "e2e_control_epoch_lifecycle"
path = "tests/e2e_control_epoch_lifecycle.rs"

[[test]]
name = "e2e_quarantine_registry_lifecycle"
path = "tests/e2e_quarantine_registry_lifecycle.rs"

[[bench]]
name = "cuckoo_revocation_bench"
harness = false

[[bench]]
name = "blake3_performance_bench"
harness = false
required-features = ["blake3"]

[[bench]]
name = "replay_bundle_gzip_bench"
harness = false

[[bench]]
name = "trust_card_canonical_bench"
harness = false

[[bench]]
name = "proof_verifier_gate_bench"
harness = false
